// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ManageTeamsDropdown should match snapshot for guest 1`] = `
<div>
  <div
    class="MenuWrapper "
  >
    <a>
      <span>
        Guest
         
      </span>
      <span
        class="caret"
      />
    </a>
  </div>
</div>
`;

exports[`ManageTeamsDropdown should match snapshot for system admin 1`] = `
<div>
  <div
    class="MenuWrapper "
  >
    <a>
      <span>
        System Admin
         
      </span>
      <span
        class="caret"
      />
    </a>
  </div>
</div>
`;

exports[`ManageTeamsDropdown should match snapshot for team admin 1`] = `
<div>
  <div
    class="MenuWrapper "
  >
    <a>
      <span>
        Team Admin
         
      </span>
      <span
        class="caret"
      />
    </a>
  </div>
</div>
`;

exports[`ManageTeamsDropdown should match snapshot for team member 1`] = `
<div>
  <div
    class="MenuWrapper "
  >
    <a>
      <span>
        Team Member
         
      </span>
      <span
        class="caret"
      />
    </a>
  </div>
</div>
`;
